2017-07-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix round halfway to even with non-integers

2017-07-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix multiplication of matrix by (row) vector

2017-07-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Interpret 1e.1 as 1^10*0.1 instead of 1*e*0.1, and enable use of 'e' as unknown

2017-07-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Example property for functions

2017-07-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* More efficient factorials
	* Fix Number::print() not able to terminate with very large numbers (halted at cln::expt_pos with y = 0) 
	* Fix termination of MathStructure::print() and format() with very large size
	* Add extra termination points for MathStructure with large size and do not sort numbers when aborted
	* Fix display of large integers in fractional modes
	* Make product() and sum() more efficient
	* Fix for()
	* Check that step size gives finite number of data points and set max data points to 1000000
	* Increase speed of Number::print() with huge numbers

2017-07-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add option to use step size instead of sampling rate for plot function
	* Fix non-decimal numbers with rpn syntax

2017-07-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Prefer non-hidden composite units over alternatives with multiple units, in optimal unit conversion (5 m/s^2 instead of 0.005 N/g)

2017-07-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* New Calculator::calculate() variant that calculates a parsed expression
	* Command line option for maximum calculation and display time

2017-07-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix formatting of (x^2)/(10y) (was (1*x^2)/(10y))
	* STRUCT_ABORTED MathStructure type

2017-07-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Rename Calculator::printMathStructureTimeOut() to Calculator::print()

2017-07-09 Hanna Knutsson <hanna.knutsson@protonmail.com>
